# quant-platform

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/candidates/: README.md  benchmark-btc-hold.json  flow-gated-trend-short.json  sol-funding-carry-tracker.json  trend-w480-tracker.json
config/strategies/: btcusdt-1h-ema-trend.json  example-btc-trend.json  strategy.schema.json
src/quant_platform/: __init__.py  cli.py  cli_cycle.py  cli_dashboard.py  cli_forward.py  cli_outcomes.py  cycle.py  dashboard.py  journal.py  observability.py
src/quant_platform/agents/: __init__.py  prompts.py  providers.py
src/quant_platform/api/: __init__.py
src/quant_platform/data/: __init__.py  binance_client.py  cache.py  context.py  openbb_client.py  schemas.py
src/quant_platform/execution/: __init__.py  funding.py  paper.py  session.py  state.py
src/quant_platform/monitoring/: __init__.py  status.py
src/quant_platform/risk/: engine.py  (+1 more)
tests/unit/: test_backtest.py  test_binance_client.py  test_cache.py  test_candidates.py  test_cli_pipeline.py  test_context.py  test_cycle.py  test_dashboard.py  test_equity_history.py  test_evaluator.py  test_execution.py  test_forward.py  test_funding_accrual.py  test_hour_utc.py  test_journal.py  test_m12_sizing_multisymbol.py  test_observability.py  test_openbb_client.py  test_outcomes.py  test_paper_state.py  test_protocol.py  test_research_graph.py  test_risk_engine.py  test_schemas.py  test_short_side.py  test_sign_report.py  test_status.py  test_strategy_loader.py  test_strategy_schema.py  test_validation.py
(+15 files in other folders)
