[project]
name = "quant-platform"
version = "0.1.0"
description = "AI-powered cryptocurrency trading platform (PROJECT GENESIS primary repository)"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "jsonschema>=4.21",
]

[project.scripts]
quant-desk = "quant_platform.cli:main"
quant-desk-outcomes = "quant_platform.cli_outcomes:main"

[project.optional-dependencies]
desk = [
    "langgraph>=0.4",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "typing-extensions>=4.12",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
